--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-features {
-  background: #90B8AC;
+  background: #20715a;
 }
 
 #fh5co-features h2 {
@@ -233,32 +233,35 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-features .feature-left {
   margin-bottom: 40px;
-  float: left;
+  display: inline-block
 }
-@media screen and (max-width: 992px) {
+/* @media screen and (max-width: 992px) {
   #fh5co-features .feature-left {
     margin-bottom: 30px;
   }
-}
+  .col-md-2 {
+    
+  }
+} */
 #fh5co-features .feature-left .icon {
   display: table;
   text-align: center;
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   margin: 0 auto;
-  background: #fff;
+  background-color: #90B8AC;
   margin-bottom: 20px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  border-radius: 20%;
 }
 #fh5co-features .feature-left .icon i {
-  font-size: 50px;
+  font-size: 80px;
   display: table-cell;
   vertical-align: middle;
   height: 100px;
-  color: #20715A !important;
+  /* color: #20715A !important; */
 }
 #fh5co-features .feature-left .feature-copy {
   width: 100%;
@@ -336,14 +339,15 @@ h1, h2, h3, h4, h5, h6, figure {
   padding-top: 0;
 }
 .info li .first-block {
-  width: 40%;
+  width: 35%;
   display: inline-block;
   float: left;
   color: #000;
   font-weight: bold;
+  
 }
 .info li .second-block {
-  width: 60%;
+  width: 65%;
   display: inline-block;
   color: rgba(0, 0, 0, 0.5);
 }
@@ -761,7 +765,7 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .work .desc {
     opacity: 1;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.9);
   }
   .work .desc h3 {
     -webkit-transform: translate3d(0, 0, 0);
